--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     font-family: 'Lato', sans-serif;
     font-family: 'Work Sans', sans-serif;
-    /* border: 0.5px solid black; */
 }
 
 body {
@@ -134,6 +133,7 @@ nav {
     font-weight: 600;
     text-transform: uppercase;
     margin: 10px;
+    cursor: pointer;
 }
 
 .btn2 {
@@ -529,5 +529,23 @@ footer {
 
     /* card section end */
 
+    /* footer section */
+
+    .footer-list,
+    .footer-img,
+    .footer-list2 {
+        flex-wrap: wrap;
+    }
+
+    .footer-img img {
+        padding: 0 15px;
+        margin: 12px 15px 0 15px;
+    }
+
+    .footer-list2 {
+        margin-top: 10px;
+    }
+
+    /* footer section End */
 
 }
